--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "react-router": "^3.0.0",
     "shortid": "^2.2.8",
     "simpl-schema": "^1.1.0"
+  },
+  "engines": {
+    "node": "8.8.1"
   }
 }
